--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Boids</title>
+    <title>Starlings</title>
     <!-- Load the script "js/main.js" as our entry point -->
     <script data-main="js/main" src="js/libs/require.js"></script>
     <style>
-		body { margin: 0;} 
+		body { margin: 0;}
 	</style>
 </head>
 <body>
